--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="DialABaterry offers top-quality automotive battery solutions in Cape Town. Get expert battery testing, installation, emergency assistance, and eco-friendly recycling."
+      content="DialABattery offers top-quality automotive battery solutions in Cape Town. Get expert battery testing, installation, emergency assistance, and eco-friendly recycling."
     />
     <meta
       name="keywords"
       content="Cape Town car batteries, automotive batteries, battery testing, emergency roadside assistance, battery recycling, BBBEE compliant, reliable car batteries, battery car power"
     />
-    <meta name="author" content="DialABaterry" />
+    <meta name="author" content="DialABattery" />
     <meta name="robots" content="index, follow" />
     <meta property="og:type" content="website" />
     <meta
@@ -24,6 +24,10 @@
     />
     <meta property="og:image" content="path_to_image" />
     <meta property="og:url" content="https://www.dialabattery.co.za" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.ico" />
+
     <title>DialABattery - Automotive Battery Solutions in Cape Town</title>
   </head>
 
