--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,32 +3,91 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Optimized Meta Tags -->
     <meta
       name="description"
-      content="DialABattery offers top-quality automotive battery solutions in Cape Town. Get expert battery testing, installation, emergency assistance, and eco-friendly recycling."
+      content="Need a car battery in Cape Town? Get fast, affordable car battery delivery & installation within 60 minutes. Call now for expert roadside assistance!"
     />
     <meta
       name="keywords"
-      content="Cape Town car batteries, automotive batteries, battery testing, emergency roadside assistance, battery recycling, BBBEE compliant, reliable car batteries, battery car power"
+      content="car battery delivery Cape Town, car battery installation, emergency roadside assistance, car battery replacement in Bellville, mobile battery service in Claremont, car battery delivery near me"
     />
-    <meta name="author" content="DialABattery" />
+    <meta name="author" content="Dial A Battery" />
     <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Meta Tags (For Social Media Sharing) -->
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="DialABattery - Automotive Battery Solutions in Cape Town"
+      content="Car Battery Delivery Cape Town | Dial A Battery - Mobile Service"
     />
     <meta
       property="og:description"
-      content="Reliable and affordable car batteries, testing, installation, and emergency services in Cape Town. Eco-friendly recycling available."
+      content="Reliable and affordable car battery delivery & installation within 60 minutes in Cape Town. Call now!"
     />
-    <meta property="og:image" content="path_to_image" />
+    <meta
+      property="og:image"
+      content="https://www.dialabattery.co.za/images/dialabatteryog.webp"
+    />
     <meta property="og:url" content="https://www.dialabattery.co.za" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Car Battery Delivery Cape Town | Dial A Battery"
+    />
+    <meta
+      name="twitter:description"
+      content="Fast and affordable car battery delivery & installation in Cape Town. Get expert roadside assistance within 60 minutes!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.dialabattery.co.za/images/dialabatteryog.webp"
+    />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon.ico" />
 
-    <title>DialABattery - Automotive Battery Solutions in Cape Town</title>
+    <title>
+      Car Battery Delivery Cape Town | Dial A Battery - Mobile Service
+    </title>
+
+    <!-- Structured Data (JSON-LD for Local SEO) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Dial A Battery",
+        "url": "https://www.dialabattery.co.za",
+        "image": "https://www.dialabattery.co.za/images/dialabatteryog.webp",
+        "description": "Dial A Battery offers expert car battery delivery, installation, testing, and roadside assistance in Cape Town. Eco-friendly battery recycling available.",
+        "telephone": "+27 67 221 3523",
+        "openingHours": "Mo-Su 00:00-23:59",
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": -33.9249,
+          "longitude": 18.4241
+        },
+        "serviceArea": {
+          "@type": "Place",
+          "name": "Cape Town"
+        },
+        "services": [
+          {
+            "@type": "Service",
+            "name": "Car Battery Delivery",
+            "description": "We deliver and install car batteries within 60 minutes in Cape Town."
+          },
+          {
+            "@type": "Service",
+            "name": "Emergency Battery Replacement",
+            "description": "24/7 roadside assistance for dead car batteries in Cape Town."
+          }
+        ]
+      }
+    </script>
   </head>
 
   <body>
